fix: When the alert_close button is the only child (Text has no extra wrapper in this scenario) the button now is properly positioned and spacing properly applied

--- a/scss/components/_alert.scss
+++ b/scss/components/_alert.scss
@@ -77,8 +77,12 @@
 		}
 	}
 
-	&:is(:has(.alert__close), .is-dismissible) > :first-child {
+	&:is(:has(.alert__close):not(:only-child), .is-dismissible) > :first-child {
 		margin-inline-end: calc(var(--spacing-alert) * 2);
+	}
+
+	&:is(:has(.alert__close):only-child, .is-dismissible) {
+		padding-inline-end: calc(var(--spacing-alert) * 3.5);
 	}
 
 	&--success {
